# simple-llm-workflow

./: .gitignore  CLAUDE.md  LICENSE  README.md  api.md  build.bat  build.spec  pyproject.toml  requirements.txt  run.bat
data_driving_agent_v2/: async_executor.py  data_driving_schemas.py  executor.py  function_example.py  function_import.py  llm_factory.py  load_plans.py  plan_generator.py  save_plan.py  test_tool_repeat.py  tool_config.py
data_driving_agent_v2/patterns/: example_daily_plan.json  narrow_window_inference.json  test_plan.json
data_driving_agent_v2/test_plan/: test_per_node_tools_limit.py
data_driving_agent_v2/test_plan/example/: 1.layout.json  example.json
example/: daily_summary.md  example.json  example.py  output.md  output_log
front/: api_client.py  backend_api.py  debugger_ui.py  execution_panel.py
plans/daily_summary/: p1.json  p1.layout.json
simple_llm_playground/: __init__.py  app.py  config.py  main.py  schemas.py  tool_loader.py
simple_llm_playground/qt_front/: api_client.py  context_panel.py  debugger_ui.py  execution_panel.py  graph.py  main_ui.py  node_properties.py  utils.py
simple_llm_playground/server/: async_executor.py  backend_api.py  data_driving_schemas.py  executor_manager.py
simple_llm_playground_v2/qt_front/: context_panel.py  main_ui.py  node_properties.py  utils.py
simple_llm_workflow/: schemas.py
simple_llm_workflow/qt_front/: api_client.py  context_panel.py  execution_panel.py  graph.py  main_ui.py  node_properties.py
simple_llm_workflow/server/: async_executor.py  backend_api.py
